--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -14,6 +14,8 @@
 # https://github.com/ghostty-org/ghostty/security/advisories/GHSA-5hcq-3j4q-4v6p
 title = Ghostty
 
+custom-shader = shaders/starfield-colors.glsl
+
 ###########
 ## shell ##
 ###########
@@ -104,7 +106,7 @@ keybind = super+l=text:\x02\x4c
 # minimize?
 # keybind = super+m= 
 # new?
-# keybind = super+n= 
+keybind = super+n=text:\x02\x25
 # <perfix>+u (open url)
 keybind = super+o=text:\x02\x75
 # :GotoFile
@@ -139,7 +141,7 @@ keybind = super+w=text:\x02\x78
 # keybind = super+shift+i=
 # secondary sesh
 # keybind = super+shift+j=
-# keybind = super+shift+k=
+keybind = super+shift+k=text:\x02\x52
 # keybind = super+shift+l=
 # keybind = super+shift+m=
 # keybind = super+shift+n=
@@ -159,10 +161,10 @@ keybind = super+shift+p=text:\x3a\x47\x6f\x54\x6f\x43\x6f\x6d\x6d\x61\x6e\x64\x0
 # keybind = super+shift+z= (redo?)
 
 # special characters
-# jump back
-keybind = super+left_bracket=text:<C-o>
 # jump forward
-keybind = super+right_bracket=text:<C-i>
+keybind = super+right_bracket=text:<C-o>
+# jump back
+keybind = super+left_bracket=text:<C-i>
 
 # special characters (shift)
 # <perfix>+n (next window)
