--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,8 +50,6 @@ bind-key "R" run-shell "sesh connect \"\$(
     --preview 'sesh preview {}' \
 )\""
 
-
-
 # TODO: learn how this works
 set-option -g focus-events on
 
@@ -95,14 +93,16 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
-# TODO: repeat this for all bindings
 
-bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Oops, no last sessions found'"
+bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Only one session'"
 bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
 
 bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
 bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
-bind -N "⌘+b build" b split-window -v -l 10 build
+# bind -N "⌘+b build" b split-window -v -l 10 build
+# bind -N "⌘+b build (via sesh) " b new-window -c "#{pane_current_path}" -n 🔨 "sesh build && ask_to_exit.sh"
+bind -N "⌘+b build (via sesh) " b new-window -c "#{pane_current_path}" -n 🔨 "sesh build"
+bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
 bind -N "⌘+d dev" D split-window -v -l 10 dev
 bind -N "⌘+R run a script" Y split-window -v -l 10 "npm run (jq -r '.scripts | keys[]' package.json | fzf --no-border)"
 bind -N "⌘+Q kill current session" Q kill-session
@@ -154,6 +154,9 @@ set -g @plugin 'omerxx/tmux-sessionx'
 # set -g @plugin 'IdoKendo/tmux-lazy'
 set -g @plugin 'omerxx/tmux-floax'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
+#
+set-option -g automatic-rename-format '#(~/git_apps/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes}) #{b:pane_current_path}'
+
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
 run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
@@ -184,4 +187,3 @@ run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
 
 # NOTE: hide duplicates flag
 # sesh list --icons --hide-duplicates | fzf-tmux -p 100%,100% --no-border \
-
