--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -59,15 +59,15 @@ alt-shift-z = 'mode move'
 
 [mode.move.binding]
 esc = ['mode main']
-1 = ['move-node-to-workspace 1', 'workspace 1']
-2 = ['move-node-to-workspace 2', 'workspace 2']
-3 = ['move-node-to-workspace 3', 'workspace 3']
-4 = ['move-node-to-workspace 4', 'workspace 4']
-5 = ['move-node-to-workspace 5', 'workspace 5']
-6 = ['move-node-to-workspace 6', 'workspace 6']
-7 = ['move-node-to-workspace 7', 'workspace 7']
-8 = ['move-node-to-workspace 8', 'workspace 8']
-9 = ['move-node-to-workspace 9', 'workspace 9']
+# 1 = ['move-node-to-workspace 1', 'workspace 1']
+# 2 = ['move-node-to-workspace 2', 'workspace 2']
+# 3 = ['move-node-to-workspace 3', 'workspace 3']
+# 4 = ['move-node-to-workspace 4', 'workspace 4']
+# 5 = ['move-node-to-workspace 5', 'workspace 5']
+# 6 = ['move-node-to-workspace 6', 'workspace 6']
+# 7 = ['move-node-to-workspace 7', 'workspace 7']
+# 8 = ['move-node-to-workspace 8', 'workspace 8']
+# 9 = ['move-node-to-workspace 9', 'workspace 9']
 a = ['move-node-to-workspace a', 'workspace a']
 b = ['move-node-to-workspace b', 'workspace b']
 c = ['move-node-to-workspace c', 'workspace c']
