--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,6 +10,7 @@
 # https://github.com/tmux/tmux
 
 # global sessions
+# bind-key "K" display-popup -h 90% -w 50% -E "sesh ui"
 bind-key "K" run-shell "sesh connect \"$(
   sesh list --icons --hide-duplicates | fzf-tmux -p 100%,100% --no-border \
     --ansi \
@@ -29,6 +30,8 @@ bind-key "K" run-shell "sesh connect \"$(
     --preview-window 'right:70%' \
     --preview 'sesh preview {}' \
 )\""
+
+bind-key "N" display-popup -E "sesh ui"
 
 # root sessions
 bind-key "R" run-shell "sesh connect \"\$(
@@ -57,8 +60,10 @@ set-option -g focus-events on
 set-option -g display-time 3000
 
 # colors
-set -g default-terminal "tmux-256color"
-set-option -a terminal-features 'xterm-256color:RGB'
+# set -g default-terminal "tmux-256color"
+# set-option -a terminal-features 'xterm-256color:RGB'
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
@@ -127,6 +132,7 @@ bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +
 
 bind-key "Z" display-popup -E "sesh connect \$(sesh list | zf --height 24)"
 
+
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 set -g @tmux-last-color on
@@ -147,6 +153,7 @@ set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
 set -g @tnotify-custom-cmd 'bash ~/c/dotfiles/bin/tmux-notify.sh'
 
 # community plugins
+set -g @plugin 'git@github.com:joshmedeski/tmux-voice-mode'
 set -g @plugin 'joshmedeski/vim-tmux-navigator' # <ctrl>+hjkl
 set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
 # set -g @plugin 'jimeh/tmuxifier'
