--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -14,7 +14,8 @@
 # https://github.com/ghostty-org/ghostty/security/advisories/GHSA-5hcq-3j4q-4v6p
 title = Ghostty
 
-custom-shader = shaders/starfield-colors.glsl
+# custom-shader = shaders/starfield-colors.glsl
+custom-shader = ./shaders/starfield.glsl
 
 ###########
 ## shell ##
@@ -47,6 +48,8 @@ font-family = "CommitMono"
 # fallback (not needed?)
 # font-family = "Symbols Nerd Font Mono"
 font-size = 20
+
+adjust-cell-height = 20
 macos-window-shadow = false
 mouse-hide-while-typing = true
 theme = light:catppuccin-latte,dark:catppuccin-mocha
