--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -92,7 +92,7 @@ set -g allow-passthrough on
 set -g message-command-style bg=default,fg=yellow
 set -g message-style bg=default,fg=yellow
 set -g mode-style bg=default,fg=yellow
-set -g pane-active-border-style 'fg=white,bg=default'
+set -g pane-active-border-style 'fg=black,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 
 bind '%' split-window -c '#{pane_current_path}' -h
