--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -13,7 +13,7 @@ tmux:
   symbols:
     ahead: "👆"
     behind: "👇"
-    clean: ""
+    clean: "🤌"
     branch: ""
     hashprefix: ":"
     staged: " "
@@ -25,7 +25,7 @@ tmux:
     deletions: " "
   styles:
     state: "#[fg=red,nobold]"
-    branch: "#[fg=white,nobold]"
+    branch: "#[fg=cyan,nobold]"
     staged: "#[fg=green,nobold]"
     conflict: "#[fg=red,nobold]"
     modified: "#[fg=blue,nobold]"
