--- a/.config/fish-ai.ini
+++ b/.config/fish-ai.ini
@@ -1,9 +1,9 @@
 [fish-ai]
-configuration = local-llama
-debug = True
+configuration = ollama
+debug = False
 log = ~/.config/fish-ai/debug-logs.txt
 
-[local-llama]
+[ollama]
 provider = self-hosted
-model = dolphin-llama3:8b
+model = gpt-oss
 server = http://localhost:11434/v1
