✨ Add new tmux bindings with smart window switcher

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -102,14 +102,16 @@ bind c new-window -c '#{pane_current_path}'
 bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Only one session'"
 bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
 
-bind -N "⌘+a ai (claude)" A split-window -h -c "#{pane_current_path}" "claude"
-bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
+# smart window switcher
+bind -N "⌘+a ai" A run-shell "~/.config/bin/tmux-window-switcher.sh '🤖' 'opencode'"
+bind -N "⌘+b builder" b run-shell "~/.config/bin/tmux-window-switcher.sh '🔨' 'build'"
+bind -N "⌘+d dev" D run-shell "~/.config/bin/tmux-window-switcher.sh '🔧' 'dev'"
+bind -N "⌘+e editor" E run-shell "~/.config/bin/tmux-window-switcher.sh '📝' 'nvim +GoToFile'"
+bind -N "⌘+g lazygit" g run-shell "~/.config/bin/tmux-window-switcher.sh '🌳' 'lazygit'"
+
 bind -N "⌘+G git commit (raycast) " G new-window -c "#{pane_current_path}" -n "🔒" "raycast-git-commit.sh"
 # bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
-# bind -N "⌘+b build" b split-window -v -l 10 build
-# bind -N "⌘+b build (via sesh) " b new-window -c "#{pane_current_path}" -n 🔨 "sesh build && ask_to_exit.sh"
-bind -N "⌘+b build (via sesh) " b new-window -c "#{pane_current_path}" -n 🔨 "sesh build"
-bind -N "⌘+d dev" D split-window -v -l 10 dev
+
 bind -N "⌘+R run a script" Y split-window -v -l 10 "npm run (jq -r '.scripts | keys[]' package.json | fzf --no-border)"
 bind -N "⌘+Q kill current session" Q kill-session
 bind -N "⌘+⇧+t break pane" B break-pane
