--- a/app_support/lazygit/config.yml
+++ b/app_support/lazygit/config.yml
@@ -1,13 +1,13 @@
 gui:
   # stuff relating to the UI
   nerdFontsVersion: "3"
-  scrollHeight: 2 # how many lines you scroll by
+  scrollHeight: 20 # how many lines you scroll by
   scrollPastBottom: true # enable scrolling past the bottom
-  sidePanelWidth: 0.25 # number from 0 to 1
+  sidePanelWidth: 0.30 # number from 0 to 1
   expandFocusedSidePanel: true
   mainPanelSplitMode: "flexible" # one of 'horizontal' | 'flexible' | 'vertical'
-  language: "auto" # one of 'auto' | 'en' | 'zh' | 'pl' | 'nl'
-  border: solid
+  language: "auto"
+  border: "rounded"
   theme:
     activeBorderColor:
       - blue
@@ -31,12 +31,13 @@ gui:
   skipStashWarning: true
   showFileTree: true # for rendering changes files in a tree format
   showListFooter: false # for seeing the '5 of 20' message in list panels
-  showRandomTip: true
+  showRandomTip: false
   showCommandLog: false
   showBottomLine: false
   commandLogSize: 8
-  authorColors: # in case you're not happy with the randomly assigned colour
-    "joshmedeski": "#9db5bf"
+  authorColors:
+    "joshmedeski": "blue"
+    "Josh Medeski": "blue"
 git:
   paging:
     useConfig: false
@@ -50,10 +51,9 @@ git:
   skipHookPrefix: WIP
   autoFetch: true
   autoRefresh: true
-  branchLogCmd: "git log --graph --color=always --abbrev-commit --decorate --date=relative --pretty=medium {{branchName}} --"
-  allBranchesLogCmd: "git log --graph --all --color=always --abbrev-commit --decorate --date=relative  --pretty=medium"
-  overrideGpg: false # prevents lazygit from spawning a separate process when using GPG
-  disableForcePushing: true
+  # branchLogCmd: "git log --graph --color=always --abbrev-commit --decorate --date=relative --pretty=medium {{branchName}} --"
+  overrideGpg: true # prevents lazygit from spawning a separate process when using GPG
+  disableForcePushing: false
   parseEmoji: true
   log:
     # one of date-order, author-date-order, topo-order.
@@ -65,6 +65,8 @@ git:
     showGraph: "always"
     # displays the whole git graph by default in the commits panel (equivalent to passing the `--all` argument to `git log`)
     showWholeGraph: true
+  allBranchesLogCmds:
+    - git log --graph --all --color=always --abbrev-commit --decorate --date=relative  --pretty=medium
 refresher:
   refreshInterval: 10 # file/submodule refresh interval in seconds
   fetchInterval: 60 # re-fetch interval in seconds
@@ -79,10 +81,10 @@ notARepository: "prompt" # one of: 'prompt' | 'create' | 'skip'
 promptToReturnFromSubprocess: false # display confirmation when subprocess terminates
 customCommands:
   - key: "C"
-    subprocess: true
     command: "nvim +Commit"
     context: "files"
     description: "Commit"
+    output: terminal
   - key: "f"
     command: "git fetch --prune --all"
     context: "files"
@@ -104,32 +106,31 @@ customCommands:
     context: "localBranches"
     loadingText: "Loading Octo"
     description: "Open pull request with Octo"
-    subprocess: true
+    output: terminal
   - key: "E"
     context: "files"
     command: "gitmoji -c"
     loadingText: "Loading gitmoji"
-    subprocess: true
+    output: terminal
   - key: "z"
     command: "~/.config/bin/gc"
     context: "files"
     loadingText: "Commitizen prompt"
-    subprocess: true
+    output: terminal
   - key: '<c-g>'
     context: 'files'
     command: 'lumen draft | tee >(pbcopy)'
     loadingText: 'Generating message...'
-    showOutput: true
+    output: popup
   - key: '<c-G>'
     context: 'files'
     command: 'lumen draft -c {{.Form.Context | quote}} | tee >(pbcopy)'
     loadingText: 'Generating message...'
-    showOutput: true
     prompts:
-          - type: 'input'
-            title: 'Context'
-            key: 'Context'
-
+      - type: 'input'
+        title: 'Context'
+        key: 'Context'
+    output: popup
 keybinding:
   universal:
     quit: "q"
