Ignore fish exa config

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ app_support/lazygit/state.yml
 .config/wezterm/wallpapers
 .config/ghostty/shaders
 .config/fish/conf.d/firecrawl.fish
+.config/fish/conf.d/exa.fish
