Adjust tpm settings
- Disable unused pluins and options

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -155,9 +155,9 @@ set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
 set -g @tnotify-custom-cmd 'bash ~/c/dotfiles/bin/tmux-notify.sh'
 
 # community plugins
-set -g @plugin 'git@github.com:joshmedeski/tmux-voice-mode'
+# set -g @plugin 'git@github.com:joshmedeski/tmux-voice-mode'
 set -g @plugin 'joshmedeski/vim-tmux-navigator' # <ctrl>+hjkl
-set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
+# set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
 # set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'rickstaa/tmux-notify'
 set -g @plugin 'omerxx/tmux-sessionx'
@@ -165,7 +165,7 @@ set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'omerxx/tmux-floax'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 #
-set-option -g automatic-rename-format '#(~/git_apps/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes}) #{b:pane_current_path}'
+# set-option -g automatic-rename-format '#(~/git_apps/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes}) #{b:pane_current_path}'
 
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
