--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -13,8 +13,8 @@ tmux:
   symbols:
     ahead: "👆"
     behind: "👇"
-    clean: "🤌"
-    branch: ""
+    clean: ""
+    branch: " "
     hashprefix: ":"
     staged: " "
     conflict: "󰕚 "
@@ -25,7 +25,7 @@ tmux:
     deletions: " "
   styles:
     state: "#[fg=red,nobold]"
-    branch: "#[fg=black,bold,italics]"
+    branch: "#[fg=black,italics]"
     staged: "#[fg=green,nobold]"
     conflict: "#[fg=red,nobold]"
     modified: "#[fg=blue,nobold]"
