Add comment to nerd font window name config

--- a/.config/tmux/tmux-nerd-font-window-name.yml
+++ b/.config/tmux/tmux-nerd-font-window-name.yml
@@ -1,3 +1,6 @@
+# Nerd font window name plugin 
+# https://github.com/joshmedeski/tmux-nerd-font-window-name
+
 config:
   fallback-icon: "❓"
   multi-pane-icon: "🪟"
