--- a/.config/sesh/sesh.toml
+++ b/.config/sesh/sesh.toml
@@ -157,7 +157,7 @@ startup_command = "git worktree add (gum input --placeholder 'Enter new worktree
 [[session]]
 name = "tmux config"
 path = "~/c/dotfiles/.config/tmux"
-startup_command = "nvim tmux.conf"
+startup_command = "nvim tmux.conf tmux-nerd-font-window-name.yml gitmux.yml"
 preview_command = "bat --language=bash --style=snip --color=always ~/c/dotfiles/.config/tmux/tmux.conf"
 
 [[session]]
