Switch to simple run-shell with -S flag instead of custom tmux script

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -99,11 +99,11 @@ bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-
 bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
 
 # smart window switcher
-bind -N "⌘+a ai" A run-shell "~/.config/bin/tmux-window-switcher.sh '🤖' 'opencode'"
-bind -N "⌘+b builder" b run-shell "~/.config/bin/tmux-window-switcher.sh '🔨' 'build'"
-bind -N "⌘+d dev" D run-shell "~/.config/bin/tmux-window-switcher.sh '🔧' 'dev'"
-bind -N "⌘+e editor" E run-shell "~/.config/bin/tmux-window-switcher.sh '📝' 'nvim +GoToFile'"
-bind -N "⌘+g lazygit" g run-shell "~/.config/bin/tmux-window-switcher.sh '🌳' 'lazygit'"
+bind -N "⌘+a ai" A new-window -S -n '🤖' 'ai'
+bind -N "⌘+b builder" b new-window -S -n '🔨' 'build'
+bind -N "⌘+d dev" D new-window -S -n '🔧' 'dev'
+bind -N "⌘+e editor" E new-window -S -n '📝' 'nvim +GoToFile'
+bind -N "⌘+g lazygit" g new-window -S -n '🌳' 'lazygit'
 
 bind -N "⌘+G git commit (raycast) " G new-window -c "#{pane_current_path}" -n "🔒" "raycast-git-commit.sh"
 # bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
