--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -16,6 +16,7 @@ title = Ghostty
 
 # custom-shader = shaders/starfield-colors.glsl
 custom-shader = ./shaders/starfield.glsl
+custom-shader-animation = true
 
 ###########
 ## shell ##
@@ -52,7 +53,7 @@ font-size = 20
 adjust-cell-height = 20
 macos-window-shadow = false
 mouse-hide-while-typing = true
-theme = light:catppuccin-latte,dark:catppuccin-mocha
+theme = dark:Catppuccin Frappe,light:Catppuccin Latte
 window-decoration = false
 window-padding-x = 16
 window-padding-y = 10
