Update nerd font window icons
- Sort alphabetically
- Add opencode

--- a/.config/tmux/tmux-nerd-font-window-name.yml
+++ b/.config/tmux/tmux-nerd-font-window-name.yml
@@ -13,10 +13,10 @@ icons:
   fish: "🐠"
   fx: "📄"
   nvim: "📝"
-  # nvim: ""
   ollama: "🦙"
+  opencode: "🤖"
   overmind: "👀"
+  sesh: "⚡"
   stripe-mock: "💳"
   stripe: "💳"
   yazi: "📂"
-  sesh: "⚡"
