Tmux config overhaul
- Absolute center status
- Add heading comments
- Remove unused code
- Sort options and plugins

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -56,8 +56,6 @@ set-option -g focus-events on
 set-option -g display-time 3000
 
 # colors
-# set -g default-terminal "tmux-256color"
-# set-option -a terminal-features 'xterm-256color:RGB'
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
@@ -68,104 +66,6 @@ set -g history-limit 1000000 # increase history size (from 2,000)
 set -g mouse on              # enable mouse support
 set -g renumber-windows on   # renumber all windows when any window is closed
 set -g set-clipboard on      # use system clipboard
-set -g status-interval 3     # update the status bar every 3 seconds
-
-set -g status-left " #[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml) "
-# set -g status-right-length 80
-set -g status-right ""
-
-# set-option -g status 2
-# set -g status-format[1] '#[fg=blue,nobold][#(tmux ls -F "##S##{?session_attached,*,}" | tr "\n" "|" | sed "s/ $/ /" )]'
-
-set -g status-left-length 300    # increase length (from 10)
-set -g status-position top       # macOS / darwin style
-set -g status-style 'bg=default' # transparent
-
-set -g window-status-current-format '*#[fg=magenta]#W'
-set -g window-status-format ' #[fg=gray]#W'
-
-set -g allow-passthrough on
-set -g message-command-style bg=default,fg=yellow
-set -g message-style bg=default,fg=yellow
-set -g mode-style bg=default,fg=yellow
-set -g pane-active-border-style 'fg=black,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
-
-bind '%' split-window -c '#{pane_current_path}' -h
-bind '"' split-window -c '#{pane_current_path}'
-bind c new-window -c '#{pane_current_path}'
-
-bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Only one session'"
-bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
-
-# smart window switcher
-bind -N "⌘+a ai" A new-window -S -n '🤖' 'ai'
-bind -N "⌘+b builder" b new-window -S -n '🔨' 'build'
-bind -N "⌘+d dev" D new-window -S -n '🔧' 'dev'
-bind -N "⌘+e editor" E new-window -S -n '📝' 'nvim +GoToFile'
-bind -N "⌘+g lazygit" g new-window -S -n '🌳' 'lazygit'
-
-bind -N "⌘+G git commit (raycast) " G new-window -c "#{pane_current_path}" -n "🔒" "raycast-git-commit.sh"
-# bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
-
-bind -N "⌘+R run a script" Y split-window -v -l 10 "npm run (jq -r '.scripts | keys[]' package.json | fzf --no-border)"
-bind -N "⌘+Q kill current session" Q kill-session
-bind -N "⌘+⇧+t break pane" B break-pane
-bind -N "⌘+^+t join pane" J join-pane -t 1
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
-bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
-
-# NOTE: can be used for debugging
-# )\" 2> /tmp/sesh-$(date +"%Y-%m-%d-%H-%M-%S").txt"
-
-bind-key "Z" display-popup -E "sesh connect \$(sesh list | zf --height 24)"
-
-
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
-set -g @tmux-last-color on
-set -g @tmux-last-pager 'less -r'
-set -g @tmux-last-pager 'less'
-set -g @tmux-last-prompt-pattern ' '
-set -g @tmux-nerd-font-window-name-shell-icon ''
-set -g @tmux-nerd-font-window-name-show-name false
-set -g @thumbs-command 'echo -n {} | pbcopy' # copy to clipboard
-set -g @thumbs-key C
-set -g @floax-bind H
-
-# my plugins (git@github.com: clones with ssh key for development)
-# set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
-set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
-set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
-# set -g @plugin 'git@github.com:joshmedeski/tmux-overmind'
-set -g @tnotify-custom-cmd 'bash ~/c/dotfiles/bin/tmux-notify.sh'
-
-# community plugins
-# set -g @plugin 'git@github.com:joshmedeski/tmux-voice-mode'
-set -g @plugin 'joshmedeski/vim-tmux-navigator' # <ctrl>+hjkl
-# set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
-# set -g @plugin 'jimeh/tmuxifier'
-set -g @plugin 'rickstaa/tmux-notify'
-set -g @plugin 'omerxx/tmux-sessionx'
-# set -g @plugin 'IdoKendo/tmux-lazy'
-set -g @plugin 'omerxx/tmux-floax'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-#
-# set-option -g automatic-rename-format '#(~/git_apps/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes}) #{b:pane_current_path}'
-
-
-set -g @plugin 'tmux-plugins/tpm'        # load tpm
-run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
 
 # ascii color definitions
 # 0  black
@@ -185,6 +85,101 @@ run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
 # 14 bright cyan
 # 15 bright white
 # -1 default
+
+# status bar
+set -g status-interval 3
+set -g status-justify absolute-centre
+set -g status-left " #[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml) "
+set -g status-left-length 300    # increase length (from 10)
+set -g status-position top       # macOS / darwin style
+set -g status-right ""
+set -g status-style 'bg=default' # transparent
+
+# windows
+set -g window-status-current-format '#[fg=magenta]*#W'
+set -g window-status-format ' #[fg=gray]#W'
+
+# panes
+set -g pane-active-border-style 'fg=black,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+
+set -g allow-passthrough on
+set -g message-command-style bg=default,fg=yellow
+set -g message-style bg=default,fg=yellow
+set -g mode-style bg=default,fg=yellow
+
+# bindings
+bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
+bind -N "⌘+^+t join pane" J join-pane -t 1
+bind -N "⌘+a ai" A new-window -S -n '🤖' 'ai'
+bind -N "⌘+b builder" b new-window -S -n '🔨' 'build'
+bind -N "⌘+d dev" D new-window -S -n '🔧' 'dev'
+bind -N "⌘+e editor" E new-window -S -n '📝' 'nvim +GoToFile'
+bind -N "⌘+⇧+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
+bind -N "⌘+g lazygit" g new-window -S -n '🌳' 'lazygit'
+# bind -N "⌘+G git commit (raycast) " G new-window -c "#{pane_current_path}" -n "🔒" "raycast-git-commit.sh"
+bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Only one session'"
+bind -N "⌘+⇧+Q kill current session" Q kill-session
+bind -N "⌘+⇧+R run a script" Y split-window -v -l 10 "npm run (jq -r '.scripts | keys[]' package.json | fzf --no-border)"
+bind -N "⌘+⇧+T break pane" B break-pane
+
+bind '%' split-window -c '#{pane_current_path}' -h
+bind '"' split-window -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
+bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
+
+# NOTE: can be used for debugging
+# )\" 2> /tmp/sesh-$(date +"%Y-%m-%d-%H-%M-%S").txt"
+
+bind-key "Z" display-popup -E "sesh connect \$(sesh list | zf --height 24)"
+
+# plugin settings
+set -g @floax-bind H
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @fzf-url-history-limit '2000'
+set -g @thumbs-command 'echo -n {} | pbcopy' # copy to clipboard
+set -g @thumbs-key C
+set -g @tmux-last-color on
+set -g @tmux-last-pager 'less -r'
+set -g @tmux-last-pager 'less'
+set -g @tmux-last-prompt-pattern ' '
+set -g @tmux-nerd-font-window-name-shell-icon ''
+set -g @tmux-nerd-font-window-name-show-name false
+set -g @tnotify-custom-cmd 'bash ~/c/dotfiles/bin/tmux-notify.sh'
+
+# plugins
+
+# TODO: revisit using this?
+# set -g @plugin 'git@github.com:joshmedeski/tmux-overmind'
+# set -g @plugin 'IdoKendo/tmux-lazy'
+# set -g @plugin 'git@github.com:joshmedeski/tmux-voice-mode'
+# set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
+# set -g @plugin 'jimeh/tmuxifier'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
+set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'joshmedeski/vim-tmux-navigator' # <ctrl>+hjkl
+set -g @plugin 'rickstaa/tmux-notify'
+set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'omerxx/tmux-floax'
+
+# set-option -g automatic-rename-format '#(~/git_apps/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes}) #{b:pane_current_path}'
+
+set -g @plugin 'tmux-plugins/tpm'        # load tpm
+run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
 
 # TODO: create a fabric workflow (with tmux popop)
 # bind-key "A" display-popup -E -w 40% "sesh connect \"$(
