--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -25,7 +25,7 @@ tmux:
     deletions: " "
   styles:
     state: "#[fg=red,nobold]"
-    branch: "#[fg=gray,italics]"
+    branch: "#[fg=white,italics]"
     staged: "#[fg=green,nobold]"
     conflict: "#[fg=red,nobold]"
     modified: "#[fg=blue,nobold]"
