--- a/app_support/lazygit/config.yml
+++ b/app_support/lazygit/config.yml
@@ -39,10 +39,27 @@ gui:
     "joshmedeski": "blue"
     "Josh Medeski": "blue"
 git:
-  paging:
-    useConfig: false
-    colorArg: always
-    pager: delta --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+  pagers:
+    # - externalDiffCommand: "difft --display=inline"
+    # - externalDiffCommand: difft --color=always
+    # - pager: delta --paging=never
+    - pager: diff-so-fancy
+    - externalDiffCommand: "difft --display=side-by-side"
+      colorArgs: always
+    # - pager: ydiff -p cat -s --wrap --width={{columnWidth}}
+    #   colorArg: never
+    # - pager: ydiff -p cat -s --wrap --width={{columnWidth}}
+    #   colorArg: never
+    # - pager: ydiff -p cat -s --unified --width={{columnWidth}}
+    #   colorArg: never
+
+
+    # - externalDiffCommand: difft --color=always
+    # - externalDiffCommand: difft --width={{columnWidth}}
+    # - pager: ydiff -p cat -s --wrap --width={{columnWidth}} 
+    #   colorArg: never
+    # - pager: delta --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+    # - pager: delta --dark --paging=never
   merging:
     # only applicable to unix users
     manualCommit: false
@@ -150,7 +167,7 @@ keybinding:
     nextBlock: "<right>" # goto the next block / panel
     prevBlock-alt: "h" # goto the previous block / panel
     nextBlock-alt: "l" # goto the next block / panel
-    jumpToBlock: ["1", "2", "3", "4", "5"] # goto the Nth block / panel
+    jumpToBlock: [ "1", "2", "3", "4", "5" ] # goto the Nth block / panel
     nextMatch: "n"
     prevMatch: "N"
     optionMenu: "x" # show help menu
